# miner

./: CMakeLists.txt  INSTALL  README.md  TODO  board.cc  board.h  configure_field_dialog.ui  field.cc  field.h  game_board_widget.cc  game_board_widget.h  glpk_lp_problem.cc  glpk_lp_problem.h  glpk_lp_problem_inl.h  glpk_solver.cc  glpk_solver.h  lp_problem.cc  lp_problem.h  lp_problem_inl.h  main.cc  main_window.cc  main_window.h  main_window.ui  miner.qrc  scene.cc  scene.h  solver.cc  solver.h  soplex_solver.cc  soplex_solver.h  stable.h  util.cc  util.h
cmake/: pch.cmake  pch_get_deps.pl
